--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dubbo-serialization-node",
-  "version": "1.2.1",
+  "version": "1.2.3",
   "description": "dubbo protocol nodejs implementation",
   "main": "lib/index.js",
   "files": [
@@ -34,7 +34,7 @@
     "byte": "^2.0.0",
     "connection": "^1.0.0",
     "crc": "^3.8.0",
-    "hessian.js-1": "^1.8.3",
+    "hessian.js": "^2.9.0",
     "is-type-of": "^1.2.0",
     "sdk-base": "^3.6.0",
     "sofa-hessian-node": "^1.0.1",
